crates/vexor-compiler/tests/golden/error/output/if_missing_else.err
parse error at line 4, column 29
  |
4 | val result = if r > 50 { c }
  |                             ^
expected `else`